--- a/packages/SystemUI/res/layout/status_bar_notification_speed_bump.xml
+++ b/packages/SystemUI/res/layout/status_bar_notification_speed_bump.xml
@@ -26,6 +26,6 @@
         android:id="@+id/speedbump_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/exposed_speedbump_line"
+        android:background="@color/speedbump_line_bg"
         android:layout_gravity="center_vertical"/>
 </com.android.systemui.statusbar.SpeedBumpView>
