Weather: Handle no weather information available, (1/2):
Lock screen:
- Dont show "--" if no weather information available

Status bar expanded header:
- If "Show weather" is set, show an info about missing weather information

Conflicts:
	packages/SystemUI/res/values-de/dk_strings.xml
	packages/SystemUI/res/values-es/dk_strings.xml
	packages/SystemUI/res/values-fr/dk_strings.xml
	packages/SystemUI/res/values-ru/dk_strings.xml
	packages/SystemUI/res/values/dk_strings.xml

Change-Id: Id4a4cba5ed7ccc98ce04389bd00d59c33d7991cc

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -55,4 +55,6 @@
     <string name="advanced_dev_option_wipe_app">Wipe app data</string>
     <string name="advanced_dev_option_force_stop">Force stop</string>
     <string name="advanced_dev_option_uninstall">Uninstall</string>
+
+    <string name="weather_info_not_available">Weather informations not available</string>
 </resources>
