--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -57,4 +57,7 @@
     <string name="advanced_dev_option_uninstall">Uninstall</string>
 
     <string name="weather_info_not_available">Weather informations not available</string>
+    <!-- Title shown in recents popup for showing app launch in floating mode -->
+    <string name="recent_float_mode_title">Floating mode</string>
+
 </resources>
